--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
     </footer> -->
 
     <!-- Модальне вікно -->
-    <!-- <div class="backdrop backdrop--is-hidden" data-modal>
+    <div class="backdrop backdrop--is-hidden" data-modal>
       <div class="modal modal__container">
         <button
           class="close-cross modal__close-cross button"
@@ -640,7 +640,7 @@
           <button class="modal__button button button--primary" type="submit">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- Мобільне меню -->
     <div class="mobile-menu js-menu-container" id="mobile-menu">
