--- a/index.html
+++ b/index.html
@@ -77,60 +77,68 @@
       </section>
 
       <!-- Секція Особливості -->
-      <!-- <section class="features">
+      <section class="features">
         <div class="container">
           <h2 class="heading visually-hidden">Особливості</h2>
           <ul class="features__list list">
             <li class="features__list-item">
-              <div class="features__icon-wrap">
-                <svg class="features__icon" width="70" height="70">
-                  <use href="./images/icons.svg#antenna"></use>
-                </svg>
+              <div class="fetures__item-wrap">
+                <div class="features__icon-wrap">
+                  <svg class="features__icon" width="70" height="70">
+                    <use href="./images/icons.svg#antenna"></use>
+                  </svg>
+                </div>
+                <h3 class="features__title">Увага до деталей</h3>
+                <p class="features__text">
+                  Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                </p>
               </div>
-              <h3 class="features__title">Увага до деталей</h3>
-              <p class="features__text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-              </p>
             </li>
             <li class="features__list-item">
-              <div class="features__icon-wrap">
-                <svg class="features__icon" width="70" height="70">
-                  <use href="./images/icons.svg#clock"></use>
-                </svg>
+              <div class="fetures__item-wrap">
+                <div class="features__icon-wrap">
+                  <svg class="features__icon" width="70" height="70">
+                    <use href="./images/icons.svg#clock"></use>
+                  </svg>
+                </div>
+                <h3 class="features__title">Увага до деталей</h3>
+                <p class="features__text">
+                  Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                </p>
               </div>
-              <h3 class="features__title">Увага до деталей</h3>
-              <p class="features__text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-              </p>
             </li>
             <li class="features__list-item">
-              <div class="features__icon-wrap">
-                <svg class="features__icon" width="70" height="70">
-                  <use href="./images/icons.svg#diagram"></use>
-                </svg>
+              <div class="fetures__item-wrap">
+                <div class="features__icon-wrap">
+                  <svg class="features__icon" width="70" height="70">
+                    <use href="./images/icons.svg#diagram"></use>
+                  </svg>
+                </div>
+                <h3 class="features__title">Увага до деталей</h3>
+                <p class="features__text">
+                  Так само консультація з широким активом значною мірою зумовлює.
+                </p>
               </div>
-              <h3 class="features__title">Увага до деталей</h3>
-              <p class="features__text">
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
             </li>
             <li class="features__list-item">
-              <div class="features__icon-wrap">
-                <svg class="features__icon" width="70" height="70">
-                  <use href="./images/icons.svg#astronaut"></use>
-                </svg>
+              <div class="fetures__item-wrap">
+                <div class="features__icon-wrap">
+                  <svg class="features__icon" width="70" height="70">
+                    <use href="./images/icons.svg#astronaut"></use>
+                  </svg>
+                </div>
+                <h3 class="features__title">Увага до деталей</h3>
+                <p class="features__text">
+                  Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                </p>
               </div>
-              <h3 class="features__title">Увага до деталей</h3>
-              <p class="features__text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-              </p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Чим ми займаємося -->
-      <!-- <section class="works">
+      <section class="works">
         <div class="container">
           <h2 class="heading">Чим ми займаємося</h2>
           <ul class="works__list list">
@@ -154,10 +162,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Наша команда -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="heading">Наша команда</h2>
           <ul class="team__list list">
@@ -415,7 +423,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Постійні клієнти -->
       <!-- <section class="clients">
