--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
           <ul class="team__list list">
             <li class="team__list-item">
               <div class="team-member">
-                <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+                <img
+                  srcset="./images/mobile/team-1-480.jpg, ./images/mobile/team-1-960@2x.jpg"
+                  src="./images/mobile/team-1-480.jpg"
+                  alt="Ігор Дем'яненко"
+                  width="480"
+                />
                 <div class="team-member__container">
                   <h3 class="team-member__name">Ігор Дем'яненко</h3>
                   <p lang="en" class="team-member__position">Product Designer</p>
@@ -221,7 +226,7 @@
                         href="https://www.linkedin.com"
                         rel="noopener noreferrer nofollow"
                         lang="en"
-                        aria-label="LinkedIn icon"
+                        aria-label="Linkedin icon"
                       >
                         <svg class="social-link__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -284,7 +289,7 @@
                         href="https://www.linkedin.com"
                         rel="noopener noreferrer nofollow"
                         lang="en"
-                        aria-label="LinkedIn icon"
+                        aria-label="Linkedin icon"
                       >
                         <svg class="social-link__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -347,7 +352,7 @@
                         href="https://www.linkedin.com"
                         rel="noopener noreferrer nofollow"
                         lang="en"
-                        aria-label="LinkedIn icon"
+                        aria-label="Linkedin icon"
                       >
                         <svg class="social-link__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -410,7 +415,7 @@
                         href="https://www.linkedin.com"
                         rel="noopener noreferrer nofollow"
                         lang="en"
-                        aria-label="LinkedIn icon"
+                        aria-label="Linkedin icon"
                       >
                         <svg class="social-link__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -555,7 +560,7 @@
                 href="https://www.linkedin.com"
                 rel="noopener noreferrer nofollow"
                 lang="en"
-                aria-label="LinkedIn icon"
+                aria-label="Linkedin icon"
               >
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
