--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
     <main>
       <!-- Портфоліо -->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h1 class="heading visually-hidden">Портфоліо</h1>
           <ul class="filter portfolio__filter list">
@@ -90,9 +90,9 @@
                 Маркетинг
               </button>
             </li>
-          </ul> -->
-      <!-- TODO: замінити посилання ./index.html на дійсне -->
-      <!-- <ul class="card-set list">
+          </ul>
+          <!-- TODO: замінити посилання ./index.html на дійсне -->
+          <ul class="card-set list">
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
@@ -251,7 +251,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Підвал -->
@@ -332,7 +332,7 @@
                 href="https://www.linkedin.com"
                 rel="noopener noreferrer nofollow"
                 lang="en"
-                aria-label="LinkedIn icon"
+                aria-label="Linkedin icon"
               >
                 <svg class="social-link__icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
