--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     </main>
 
     <!-- Підвал -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__container">
         <div class="footer__adress-wrap">
           <a class="logo footer__logo link" href="/" lang="en"
@@ -756,7 +756,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Модальне вікно -->
     <div class="backdrop backdrop--is-hidden" data-modal>
