--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-1.jpg" alt="Ноутбук" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-1-370x294.jpg    1x,
+                        ./images/desktop/project-1-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-1-354x294.jpg    1x,
+                        ./images/tablet/project-1-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-1-450x294.jpg    1x,
+                        ./images/mobile/project-1-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-1-450x294.jpg"
+                      alt="Ноутбук"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -112,7 +147,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-2.jpg" alt="Баскетболісти" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-2-370x294.jpg    1x,
+                        ./images/desktop/project-2-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-2-354x294.jpg    1x,
+                        ./images/tablet/project-2-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-2-450x294.jpg    1x,
+                        ./images/mobile/project-2-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-2-450x294.jpg"
+                      alt="Баскетболісти"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -130,7 +200,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-3.jpg" alt="Лого з рибою" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-3-370x294.jpg    1x,
+                        ./images/desktop/project-3-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-3-354x294.jpg    1x,
+                        ./images/tablet/project-3-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-3-450x294.jpg    1x,
+                        ./images/mobile/project-3-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-3-450x294.jpg"
+                      alt="Лого з рибою"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -146,7 +251,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-4.jpg" alt="Навушники" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-4-370x294.jpg    1x,
+                        ./images/desktop/project-4-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-4-354x294.jpg    1x,
+                        ./images/tablet/project-4-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-4-450x294.jpg    1x,
+                        ./images/mobile/project-4-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-4-450x294.jpg"
+                      alt="Навушники"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -162,12 +302,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img
-                    src="./images/project-5.jpg"
-                    alt="Коробки з паперу"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-5-370x294.jpg    1x,
+                        ./images/desktop/project-5-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-5-354x294.jpg    1x,
+                        ./images/tablet/project-5-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-5-450x294.jpg    1x,
+                        ./images/mobile/project-5-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-5-450x294.jpg"
+                      alt="Коробки з паперу"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -183,7 +353,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-6.jpg" alt="Монітор" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-6-370x294.jpg    1x,
+                        ./images/desktop/project-6-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-6-354x294.jpg    1x,
+                        ./images/tablet/project-6-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-6-450x294.jpg    1x,
+                        ./images/mobile/project-6-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-6-450x294.jpg"
+                      alt="Монітор"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -199,12 +404,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img
-                    src="./images/project-7.jpg"
-                    alt="Розгорнута книга"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-7-370x294.jpg    1x,
+                        ./images/desktop/project-7-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-7-354x294.jpg    1x,
+                        ./images/tablet/project-7-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-7-450x294.jpg    1x,
+                        ./images/mobile/project-7-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-7-450x294.jpg"
+                      alt="Розгорнута книга"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -220,7 +455,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-8.jpg" alt="Етикетка" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-8-370x294.jpg    1x,
+                        ./images/desktop/project-8-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-8-354x294.jpg    1x,
+                        ./images/tablet/project-8-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-8-450x294.jpg    1x,
+                        ./images/mobile/project-8-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-8-450x294.jpg"
+                      alt="Етикетка"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -236,7 +506,42 @@
             <li class="card-set__item">
               <a class="product link" href="./index.html">
                 <div class="product__thumb">
-                  <img src="./images/project-9.jpg" alt="Ноутбук" width="370" height="294" />
+                  <picture>
+                    <!-- desktop -->
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/desktop/project-9-370x294.jpg    1x,
+                        ./images/desktop/project-9-370x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- tablet -->
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/tablet/project-9-354x294.jpg    1x,
+                        ./images/tablet/project-9-354x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- mobile -->
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/mobile/project-9-450x294.jpg    1x,
+                        ./images/mobile/project-9-450x294@2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      src="./images/mobile/project-9-450x294.jpg"
+                      alt="Ноутбук"
+                      width="100%"
+                      height="auto"
+                      loading="lazy"
+                    />
+                  </picture>
                   <p class="product__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -255,7 +560,7 @@
     </main>
 
     <!-- Підвал -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__container">
         <div class="footer__adress-wrap">
           <a class="logo footer__logo link" href="/" lang="en"
@@ -362,7 +667,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Мобільне меню -->
     <div class="mobile-menu js-menu-container" id="mobile-menu">
